WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54923
[chromium] PopupContainer::show() confuses clang's -Woverloaded-virtual
https://bugs.webkit.org/show_bug.cgi?id=54923
Summary
[chromium] PopupContainer::show() confuses clang's -Woverloaded-virtual
Nico Weber
Reported
2011-02-21 18:39:34 PST
…because the superclass ScrollView has a show() method as well: In file included from /b/build/slave/mac_clang/build/src/third_party/WebKit/Source/WebCore/WebCore.gyp/../platform/chromium/PopupMenuChromium.cpp:33: ../platform/chromium/PopupMenuChromium.h:136:10:error: 'WebCore::PopupContainer::show' hides overloaded virtual function [-Woverloaded-virtual] void show(const IntRect&, FrameView*, int index); ^ In file included from /b/build/slave/mac_clang/build/src/third_party/WebKit/Source/WebCore/WebCore.gyp/../platform/chromium/PopupMenuChromium.cpp:33: In file included from ../platform/chromium/PopupMenuChromium.h:36: In file included from ../platform/chromium/FramelessScrollView.h:34: ../platform/ScrollView.h:265:18: note: hidden overloaded virtual function 'WebCore::ScrollView::show' declared here virtual void show(); ^ 1 error generated.
Attachments
Patch
(4.25 KB, patch)
2011-02-21 18:46 PST
,
Nico Weber
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nico Weber
Comment 1
2011-02-21 18:46:03 PST
Created
attachment 83254
[details]
Patch
WebKit Commit Bot
Comment 2
2011-02-21 23:05:45 PST
Comment on
attachment 83254
[details]
Patch Clearing flags on attachment: 83254 Committed
r79294
: <
http://trac.webkit.org/changeset/79294
>
WebKit Commit Bot
Comment 3
2011-02-21 23:05:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug