2011-02-21  Nico Weber  <thakis@chromium.org>

Reviewed by James Robinson.

        [chromium] PopupContainer::show() confuses clang's -Woverloaded-virtual
        https://bugs.webkit.org/show_bug.cgi?id=54923

        Rename PopupContainer::show() to showInRect(), to make it obvious it's
        not an override of ScrollView::show().

        No intended functionality change.

        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupContainer::showInRect):
        (WebCore::PopupMenuChromium::show):
        * platform/chromium/PopupMenuChromium.h:
2011-02-21  Nico Weber  <thakis@chromium.org>

        Reviewed by James Robinson.

        [chromium] PopupContainer::show() confuses clang's -Woverloaded-virtual
        https://bugs.webkit.org/show_bug.cgi?id=54923

        Rename PopupContainer::show() to showInRect(), to make it obvious it's
        not an override of ScrollView::show().

        No intended functionality change.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::applyAutoFillSuggestions):

Canonical link: https://commits.webkit.org/69217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79294 268f45cc-cd09-0410-ab3c-d52691b4dbfc