Source/WebCore/platform/chromium/PopupMenuChromium.h
@@ -133,7 +133,7 @@ public:
     // so WebViewImpl can create a PopupContainer. This method is used for
     // displaying auto complete popup menus on Mac Chromium, and for all
     // popups on other platforms.
-    void show(const IntRect&, FrameView*, int index);
+    void showInRect(const IntRect&, FrameView*, int index);
 
     // Hides the popup.
     void hidePopup();
